--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#content" class="home active">首页</a></li>
             <li><a href="http://ys.17mooc.cn/" target="_blank">慧城印刷</a></li>
             <li><a href="404.html">产品中心</a></li>
-            <li><a href="404.html">代理加盟</a></li>
+            <li><a href="agent.html">代理加盟</a></li>
             <li><a href="about.html">关于我们</a></li>
             <li><a href="404.html">人才招聘</a></li>
             <li class="phone"><img src="img/tel-icon.png" alt=""/><a href="tel:400-716-9088">400-716-9088</a></li>
