--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <script src="js/jquery-1.7.2.min.js"></script>
     <script src="js/jquery.mousewheel.js"></script>
     <!--<script src="js/index.js"></script>-->
+    <script>
+        (function () {
+            var url = location.href;
+            // replace www.test.com with your domain
+            if ( (url.indexOf('http://hclife.net/') != -1) && navigator.userAgent.match(/(iPhone|iPod|Android|ios|iPad)/i) ) {
+                location.href = 'http://m.baidu.com';
+            }
+        })();
+    </script>
 </head>
 <body>
 <div class="nav">
