--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <script src="js/jquery.mousewheel.js"></script>
     <!--<script src="js/index.js"></script>-->
     <script>
-        (function () {
-            var url = location.href;
-            // replace www.test.com with your domain
-            if ( (url.indexOf('http://hclife.net/') != -1) && navigator.userAgent.match(/(iPhone|iPod|Android|ios|iPad)/i) ) {
-                location.href = 'http://m.baidu.com';
-            }
-        })();
+//        (function () {
+//            var url = location.href;
+//            // replace www.test.com with your domain
+//            if ( (url.indexOf('http://hclife.net/') != -1) && navigator.userAgent.match(/(iPhone|iPod|Android|ios|iPad)/i) ) {
+//                location.href = 'http://m.baidu.com';
+//            }
+//        })();
     </script>
 </head>
 <body>
