--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>慧城生活</title>
+    <title>慧城科技</title>
     <link rel="stylesheet" type="text/css" href="css/cssreset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/error.css"/>
